Some updates on packages

--- a/package.json
+++ b/package.json
@@ -5,26 +5,25 @@
     "csv-writer": "^1.6.0",
     "dotenv": "^16.0.3",
     "fast-xml-parser": "^4.0.15",
-    "ora": "^3.4.0",
-    "puppeteer": "^19.6.1",
-    "puppeteer-tsd": "^0.0.2"
+    "puppeteer": "^19.6.1"
   },
   "main": "dist/main.js",
   "scripts": {
-    "build": "tsc",
-    "start": "tsc; node dist/main.js",
-    "watch": "nodemon"
+    "start": "tsx src/main.ts",
+    "start:dev": "tsx watch src/main.ts",
+    "build": "tsup src"
   },
   "devDependencies": {
-    "@types/ora": "^3.2.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "eslint": "^8.32.0",
     "eslint-config-standard-with-typescript": "^33.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
-    "nodemon": "^2.0.20",
+    "puppeteer-tsd": "^0.0.2",
     "ts-node": "^10.9.1",
+    "tsup": "^6.5.0",
+    "tsx": "^3.12.2",
     "typescript": "^4.9.4"
   }
 }
