--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "csv-writer": "^1.6.0",
     "dotenv": "^16.0.3",
     "fast-xml-parser": "^4.0.15",
+    "mathjs": "^11.5.1",
     "puppeteer": "^19.6.1"
   },
   "main": "dist/main.js",
